# shmdash

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: basic.py
src/daqmon/: __init__.py
src/shmdash/: __init__.py  _client.py  _datatypes.py  _exceptions.py  _http.py  _utils.py
tests/: test_client.py  test_datatypes.py  test_exceptions.py  test_http.py  test_utils.py
